apps/zitadel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel
  namespace: nethub
  labels:
    app: zitadel
    app.kubernetes.io/name: zitadel
spec:
  type: ClusterIP
  selector:
    app: zitadel
  ports:
    - name: http
      port: 80
      targetPort: http
