apps/zitadel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel-ingress
  namespace: nethub
  labels:
    app.kubernetes.io/name: zitadel
  annotations:
    kubernetes.io/ingress.className: traefik
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
spec:
  rules:
    - host: auth.nethub.co.ke
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  number: 80
    - host: asfalis.nethub.co.ke
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  number: 80
